Resolve SR-9230 by replacing type-check with the appropriate apply calls.

The existing code used to convert a dynamic callable into what parsing
would construct, and then re-run type-checking. There were certain
circumstances where typechecking could not be called twice.
For example, Dictionary Literals were one of those cases. This led to
type-checking problems on more complex dynamicCallable programs.