test/Python/python_runtime.swift
@@ -253,4 +253,8 @@ PythonRuntimeTestSuite.test("PythonConvertible") {
   expectEqual(five, Double(5).pythonObject)
 }
 
+PythonRuntimeTestSuite.test("SR-9230") {
+  expectEqual(2, Python.len(Python.dict(a: "a", b: "b")))
+}
+
 runAllTests()
